fog: overlay: Nuke max cached processes override
* Google changed the default to 1024 processes:
https://android.googlesource.com/platform/frameworks/base/+/912a866dc3bf0

Change-Id: Icd8e28211c90d2f96e5cec6fd7e9b0672394d9ed

Signed-off-by: Reimu <192520540+Keera00@users.noreply.github.com>

--- a/overlay/FrameworksFog/res/values/config.xml
+++ b/overlay/FrameworksFog/res/values/config.xml
@@ -665,6 +665,11 @@
         <item>app.grapheneos.camera</item>
     </string-array>
 
+     <string-array name="configs_base">
+        <!-- ART heap compaction for cached apps -->
+        <item>activity_manager/use_compaction=true</item>
+    </string-array>
+
     <!-- The list of package IDs that are not allowed to use aux cameras. -->
     <string-array name="config_cameraAuxPackageExcludeList" translatable="false">
         <item>org.telegram.messenger</item>
